Bug 274027 - "Invalid file format" error is coming while opening the attached test data
Summary: "Invalid file format" error is coming while opening the attached test data
Status: VERIFIED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: doc (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-24 14:11 UTC by swathi
Modified: 2011-05-27 14:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test data (43.00 KB, application/msword)
2011-05-24 14:11 UTC, swathi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description swathi 2011-05-24 14:11:44 UTC
Created attachment 60267 [details]
Test data

Version: git checkout 5afdc09e3e61f1ea303115a8a35d412a710cb52f 
        (Using KDE 4.5.5)                
     OS: Kubuntu 10.10
Test data is in ms word 2003 format which has some text content in it.
Open the same document in calligra words.

Expected outcome:
Document should be opened.
Actual outcome:
 “Could not the open the file, Reason:Invalid file format” error dialog box is
coming.

Frequency:
Always.
Comment 1 Matus Uzak 2011-05-25 14:58:19 UTC
Git commit 3bc883d5001eb0d295ed90b206cc67b3e1abbd67 by Matus Uzak.
Committed on 25/05/2011 at 14:53.
Pushed by uzak into branch 'master'.

libmso: Disabled storage objects validation in POLE.

* Word8 files representing flase postives for the validation against
  invalid file format were found.  At the moment detection of files
  containing invalid storage objects is not possible.

BUG:274027

M  +15   -7    filters/libmso/pole.cpp     

http://commits.kde.org/calligra/3bc883d5001eb0d295ed90b206cc67b3e1abbd67
Comment 2 swathi 2011-05-27 14:45:21 UTC
Verified in 70e1b6e65bcc89bffdd1ba4c9903469827c2c213.