libmso: Disabled storage objects validation in POLE.

* Word8 files representing flase postives for the validation against
  invalid file format were found.  At the moment detection of files
  containing invalid storage objects is not possible.

BUG:274027